Updated footer information

--- a/index.html
+++ b/index.html
@@ -783,9 +783,9 @@
 
     <footer class="mt-8 p-4 bg-gray-200 text-center rounded">
         <p class="text-sm">This application is developed for educational purposes and there is no guarantee the program will work as intended. It is free for use and redistribution under the MIT License.</p>
-        <p class="text-sm mt-2">Developer: Chuks</p>
-        <p class="text-sm">Email: chuks@example.com</p>
-        <p class="text-sm">Phone: +1234567890</p>
+        <p class="text-sm mt-2">Developer: Chuks Abanum</p>
+        <p class="text-sm">Email: oilmonegov@gmail.com</p>
+        <p class="text-sm">Phone: +234 (810) 131-5419</p>
     </footer>
 
     <script>
