--- a/index.html
+++ b/index.html
@@ -53,12 +53,16 @@
     <div class="max-w-4xl mx-auto p-6 bg-white shadow-lg rounded-lg">
         <h1 class="text-3xl font-bold text-center mb-8">Belbin Team Roles Questionnaire</h1>
 
-        <h2 class="text-3xl font-bold text-center mb-8">Belbin Team Roles Self Perception Inventory</h2>
+        <hr>
+
+        <h2 class="text-2xl font-semibold mb-4">Belbin Team Roles Self Perception Inventory</h2>
         <p class="text-md mb-8">
-            To complete each section of this questionnaire, tick in the far left hand column the one, two, or three sentences most applicable to yourself. Then in the column on the right, apportion 10 points between those sentences that apply to you: one of which you feel sums you up well while the other only applies some of the time.<br>
-            In this instance you could give your first choice seven points and the remaining points to your second choice. In some instances you might decide that there are two sentences that apply to you equally - if this is the case, award five points to each.<br><br>
-            <strong></strong>You must allocate all 10 points in each section.</strong>
+            To complete each section of this questionnaire, tick in the far left hand column the one, two, or three sentences most applicable to yourself. Then in the column on the right, apportion 10 points between those sentences that apply to you: one of which you feel sums you up well while the other only applies some of the time.
         </p>
+        <p class="text-md mb-8"></p>
+            In this instance you could give your first choice seven points and the remaining points to your second choice. In some instances you might decide that there are two sentences that apply to you equally - if this is the case, award five points to each.
+        </p>
+        <p class="text-md mb-8 font-semibold">You must allocate all 10 points in each section.</p>
 
         <!-- Section A -->
         <div class="section mb-8" id="sectionA">
